--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,4 +1,52 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:500,700');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
-  background-color: rgb(124, 18, 188);
+  background-color: rgb(144, 50, 200);
+  font-family: 'Roboto', sans-serif;
+}
+
+div.logo img {
+  width: 40%;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
+/* LOGIN */
+
+div.login {
+  width: 500px;
+  height: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: rgb(72, 110, 252);
+
+  /* Flexbox in login */
+  display: flex;
+  flex-direction: column;
+}
+
+a.btn {
+  width: 300px;
+  height: 50px;
+
+  line-height: 50px;
+  text-align:center;
+
+  border-radius: 5px;
+  text-transform: uppercase;
+  font-weight: bold;
+
+  color: rgb(255, 255, 255);
+  background-color: rgb(242,35,198);
+  opacity: 1;
 }
